<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/mainBackground"
    android:gravity="center"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/mainPuzzleIcon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="58dp"
        android:src="@drawable/main_puzzle_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/puzzle15Text"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainPuzzleIcon"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lilita_one_regular"
        android:gravity="center"
        android:text="@string/puzzle_15"
        android:textColor="@color/white"
        android:textSize="42sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainPuzzleIcon" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/continueGame"
        android:layout_width="236dp"
        android:layout_height="56dp"
        android:layout_below="@id/puzzle15Text"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"
        android:background="@drawable/main_shape"
        app:layout_constraintBottom_toTopOf="@id/newGame"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:tint="@color/white"
            app:srcCompat="@drawable/main_play_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            style="bold"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/lilita_one_regular"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/continueGame"
            android:textColor="@color/white"
            android:textSize="28sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/newGame"
        android:layout_width="236dp"
        android:layout_height="56dp"
        android:layout_below="@id/continueGame"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"
        android:background="@drawable/main_shape"
        app:layout_constraintBottom_toTopOf="@id/info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:tint="@color/white"
            app:srcCompat="@drawable/new_game_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            style="bold"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/lilita_one_regular"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/new_game"
            android:textColor="@color/white"
            android:textSize="28sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/info"
        android:layout_width="236dp"
        android:layout_height="56dp"
        android:layout_below="@id/newGame"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"
        android:background="@drawable/main_shape"
        app:layout_constraintBottom_toTopOf="@id/statistics"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:tint="@color/white"
            app:srcCompat="@drawable/main_info_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            style="bold"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/lilita_one_regular"
            android:gravity="center"

            android:padding="8dp"
            android:text="@string/info"
            android:textColor="@color/white"
            android:textSize="28sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/statistics"
        android:layout_width="236dp"
        android:layout_height="56dp"
        android:layout_below="@id/info"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/main_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:tint="@color/white"
            app:srcCompat="@drawable/main_statistics_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            style="bold"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/lilita_one_regular"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/statistics"
            android:textColor="@color/white"
            android:textSize="28sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>

    <!--    <androidx.appcompat.widget.LinearLayoutCompat-->
    <!--        android:id="@+id/exit"-->
    <!--        android:layout_width="236dp"-->
    <!--        android:layout_height="56dp"-->
    <!--        android:layout_below="@id/statistics"-->
    <!--        android:layout_gravity="center"-->
    <!--        android:layout_marginTop="6dp"-->
    <!--        android:layout_marginBottom="6dp"-->
    <!--        android:background="@drawable/main_shape">-->

    <!--        <androidx.appcompat.widget.AppCompatTextView-->
    <!--            style="bold"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:layout_gravity="center"-->
    <!--            android:fontFamily="@font/lilita_one_regular"-->
    <!--            android:gravity="center"-->
    <!--            android:padding="8dp"-->
    <!--            android:text="@string/exit"-->
    <!--            android:textColor="@color/white"-->
    <!--            android:textSize="28sp" />-->

    <!--    </androidx.appcompat.widget.LinearLayoutCompat>-->
