<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/win_dialog"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/mainBackground"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:layout_marginTop="4dp"
        android:id="@+id/tvCongratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lilita_one_regular"
        android:text="@string/congratulations"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgWinCUp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/win_cup"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCongratulations" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lineInfo"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/imgWinCUp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/main_shape"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:fontFamily="@font/lilita_one_regular"
                android:text="@string/moves"
                android:textColor="@color/white"
                android:textSize="8sp" />

            <TextView
                android:id="@+id/dialogMovesCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:fontFamily="@font/lilita_one_regular"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/main_shape"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:fontFamily="@font/lilita_one_regular"
                android:text="@string/time"
                android:textColor="@color/white"
                android:textSize="8sp" />

            <Chronometer
                android:id="@+id/dialogChronometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:fontFamily="@font/lilita_one_regular"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lineInfo">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dialogHomeButton"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:elevation="2dp"
            android:fontFamily="@font/lilita_one_regular"
            android:gravity="center"
            android:text="@string/home"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dialogRestartButton"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:elevation="2dp"
            android:fontFamily="@font/lilita_one_regular"
            android:gravity="center"
            android:text="@string/restart"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    android:id="@+id/win_dialog"-->
    <!--    android:layout_width="300dp"-->
    <!--    android:layout_height="wrap_content"-->
    <!--    android:layout_gravity="center"-->
    <!--    android:background="@color/mainBackground"-->
    <!--    android:gravity="center"-->
    <!--    android:orientation="vertical"-->
    <!--    android:padding="12dp">-->

    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="vertical">-->

    <!--        <TextView-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_gravity="center|top"-->

    <!--            android:fontFamily="@font/lilita_one_regular"-->
    <!--            android:text="@string/congratulations"-->
    <!--            android:textAllCaps="true"-->
    <!--            android:textColor="@color/white"-->
    <!--            android:textSize="24sp" />-->

    <!--        <androidx.appcompat.widget.AppCompatImageView-->
    <!--            android:layout_width="150dp"-->
    <!--            android:layout_height="150dp"-->
    <!--            android:layout_gravity="center"-->
    <!--            android:src="@drawable/win_cup" />-->
    <!--    </LinearLayout>-->

    <!--    <androidx.appcompat.widget.LinearLayoutCompat-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginVertical="10dp">-->

    <!--        <androidx.appcompat.widget.LinearLayoutCompat-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:layout_margin="8dp"-->
    <!--            android:layout_weight="1"-->
    <!--            android:background="@drawable/main_shape"-->
    <!--            android:gravity="center"-->
    <!--            android:orientation="vertical">-->

    <!--            <TextView-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_gravity="center"-->
    <!--                android:layout_margin="2dp"-->
    <!--                android:fontFamily="@font/lilita_one_regular"-->
    <!--                android:text="@string/moves"-->
    <!--                android:textColor="@color/white"-->
    <!--                android:textSize="12sp" />-->

    <!--            <TextView-->
    <!--                android:id="@+id/dialogMovesCount"-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_gravity="center"-->
    <!--                android:layout_margin="2dp"-->
    <!--                android:fontFamily="@font/lilita_one_regular"-->
    <!--                android:text="@string/_0"-->
    <!--                android:textColor="@color/white"-->
    <!--                android:textSize="18sp" />-->

    <!--        </androidx.appcompat.widget.LinearLayoutCompat>-->

    <!--        <androidx.appcompat.widget.LinearLayoutCompat-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:layout_margin="8dp"-->
    <!--            android:layout_weight="1"-->
    <!--            android:background="@drawable/main_shape"-->
    <!--            android:gravity="center"-->
    <!--            android:orientation="vertical">-->

    <!--            <TextView-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_gravity="center"-->
    <!--                android:layout_margin="2dp"-->
    <!--                android:fontFamily="@font/lilita_one_regular"-->
    <!--                android:text="@string/time"-->
    <!--                android:textColor="@color/white"-->
    <!--                android:textSize="12sp" />-->

    <!--            <Chronometer-->
    <!--                android:id="@+id/dialogChronometer"-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_gravity="center"-->
    <!--                android:layout_margin="2dp"-->
    <!--                android:fontFamily="@font/lilita_one_regular"-->
    <!--                android:textColor="@color/white"-->
    <!--                android:textSize="18sp" />-->

    <!--        </androidx.appcompat.widget.LinearLayoutCompat>-->

    <!--    </androidx.appcompat.widget.LinearLayoutCompat>-->

    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content">-->

    <!--        <androidx.appcompat.widget.AppCompatTextView-->
    <!--            android:id="@+id/dialogHomeButton"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="36dp"-->
    <!--            android:layout_margin="16dp"-->
    <!--            android:layout_weight="1"-->
    <!--            android:background="@drawable/bg_button"-->
    <!--            android:elevation="2dp"-->
    <!--            android:fontFamily="@font/lilita_one_regular"-->
    <!--            android:gravity="center"-->
    <!--            android:text="@string/home"-->
    <!--            android:textColor="@color/white"-->
    <!--            android:textStyle="bold" />-->


    <!--        <androidx.appcompat.widget.AppCompatTextView-->
    <!--            android:id="@+id/dialogRestartButton"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="36dp"-->
    <!--            android:layout_margin="16dp"-->
    <!--            android:layout_weight="1"-->
    <!--            android:background="@drawable/bg_button"-->
    <!--            android:elevation="2dp"-->
    <!--            android:fontFamily="@font/lilita_one_regular"-->
    <!--            android:gravity="center"-->
    <!--            android:text="@string/restart"-->
    <!--            android:textColor="@color/white"-->
    <!--            android:textStyle="bold" />-->


    <!--    </LinearLayout>-->
    <!--</LinearLayout>-->